--- a/CostAnalytics/Global/Global.csproj
+++ b/CostAnalytics/Global/Global.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{31B0EAC9-D7E5-4039-B008-3BBA35286B83}</ProjectGuid>
+    <ProjectGuid>{AF935E35-827C-498F-87DF-3A69DD83D36F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dell.CostAnalytics.Data</RootNamespace>
-    <AssemblyName>Data</AssemblyName>
+    <RootNamespace>Dell.CostAnalytics.Global</RootNamespace>
+    <AssemblyName>Global</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,42 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Containers\Interfaces\IConfiguration.cs" />
-    <Compile Include="Containers\Interfaces\ICost.cs" />
-    <Compile Include="Containers\Interfaces\IIteration.cs" />
-    <Compile Include="Containers\Interfaces\IMeasure.cs" />
-    <Compile Include="Containers\Interfaces\IPhase.cs" />
-    <Compile Include="Containers\Interfaces\IRegion.cs" />
-    <Compile Include="Containers\Interfaces\ISKU.cs" />
-    <Compile Include="Containers\Cost.cs" />
-    <Compile Include="Containers\Measure.cs" />
-    <Compile Include="Containers\Iteration.cs" />
-    <Compile Include="Containers\SKU.cs" />
-    <Compile Include="Containers\Phase.cs" />
-    <Compile Include="Containers\Configuration.cs" />
-    <Compile Include="Containers\Region.cs" />
-    <Compile Include="Containers\Product.cs" />
-    <Compile Include="Containers\Interfaces\IProduct.cs" />
-    <Compile Include="Sql\Common\BaseSql.cs" />
-    <Compile Include="Sql\Common\SqlConnectionInfo.cs" />
-    <Compile Include="Sql\Common\SqlConnectionManager.cs" />
-    <Compile Include="Sql\Common\SqlService.cs" />
-    <Compile Include="Sql\Interfaces\IConfigurationSql.cs" />
-    <Compile Include="Sql\Interfaces\ICostSql.cs" />
-    <Compile Include="Sql\Interfaces\IIterationSql.cs" />
-    <Compile Include="Sql\Interfaces\IMeasureSql.cs" />
-    <Compile Include="Sql\Interfaces\IPhaseSql.cs" />
-    <Compile Include="Sql\Interfaces\IProductSql.cs" />
+    <Compile Include="AppSettings.cs" />
+    <Compile Include="Global.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Global.settings</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sql\Interfaces\IRegionSql.cs" />
-    <Compile Include="Sql\Interfaces\ISKUSql.cs" />
-    <Compile Include="Sql\MeasureSql.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Global\Global.csproj">
-      <Project>{af935e35-827c-498f-87df-3a69dd83d36f}</Project>
-      <Name>Global</Name>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="Global.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Global.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
