--- a/CostAnalytics/DataFactoryTest/DataFactoryTest.csproj
+++ b/CostAnalytics/DataFactoryTest/DataFactoryTest.csproj
@@ -61,6 +61,10 @@
       <Project>{88b7a009-f173-4e4f-b02f-09335bbf7b3a}</Project>
       <Name>DataFactory</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Global\Global.csproj">
+      <Project>{af935e35-827c-498f-87df-3a69dd83d36f}</Project>
+      <Name>Global</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
