--- a/CostAnalytics/Global/app.config
+++ b/CostAnalytics/Global/app.config
@@ -40,6 +40,12 @@
             <setting name="ImpersonationPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="FLCExtractPath" serializeAs="String">
+                <value>C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\FLC_EXTRACT_EUC_PC_20161207051244.csv</value>
+            </setting>
+            <setting name="ConsolidatedFilePath" serializeAs="String">
+                <value>C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\consolidated.txt</value>
+            </setting>
         </Dell.CostAnalytics.Global.Global>
     </applicationSettings>
 </configuration>
