--- a/CostAnalytics/Business/Business.csproj
+++ b/CostAnalytics/Business/Business.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Containers\Product.cs" />
     <Compile Include="Containers\Region.cs" />
     <Compile Include="Containers\SKU.cs" />
+    <Compile Include="Handlers\SKU.cs" />
+    <Compile Include="Handlers\Region.cs" />
+    <Compile Include="Handlers\Product.cs" />
+    <Compile Include="Handlers\Phase.cs" />
+    <Compile Include="Handlers\Cost.cs" />
+    <Compile Include="Handlers\Configuration.cs" />
     <Compile Include="Handlers\Iteration.cs" />
     <Compile Include="Handlers\Measure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
