Test sql connection

--- a/CostAnalytics/Global/app.config
+++ b/CostAnalytics/Global/app.config
@@ -17,7 +17,7 @@
                 <value />
             </setting>
             <setting name="DBAccountName" serializeAs="String">
-                <value>True</value>
+                <value />
             </setting>
             <setting name="DBPacketSize" serializeAs="String">
                 <value>4096</value>
@@ -26,7 +26,7 @@
                 <value>30</value>
             </setting>
             <setting name="DBPersistentSecurity" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DBNumberOfRetries" serializeAs="String">
                 <value>0</value>
