--- a/CostAnalytics/Global/Global.settings
+++ b/CostAnalytics/Global/Global.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DBAccountName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DBPacketSize" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">4096</Value>
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">30</Value>
     </Setting>
     <Setting Name="DBPersistentSecurity" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="DBNumberOfRetries" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">0</Value>
