Data Factory Handler Class to compare and return database objects or add if new

--- a/CostAnalytics/DataFactory/DataFactory.csproj
+++ b/CostAnalytics/DataFactory/DataFactory.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\DataFactoryBusinessHandler.cs" />
     <Compile Include="Parsers\ConsolidatedParser.cs" />
     <Compile Include="Parsers\FLCExtractParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
