--- a/CostAnalytics/Global/Global.settings
+++ b/CostAnalytics/Global/Global.settings
@@ -39,7 +39,7 @@
       <Value Profile="(Default)">C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\FLC_EXTRACT_EUC_PC_20161207051244.csv</Value>
     </Setting>
     <Setting Name="ConsolidatedFilePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\consolidated.txt</Value>
+      <Value Profile="(Default)">C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\PlatformConfiguration.txt</Value>
     </Setting>
   </Settings>
 </SettingsFile>
