--- a/CostAnalytics/UnitTest/UnitTest.csproj
+++ b/CostAnalytics/UnitTest/UnitTest.csproj
@@ -73,6 +73,13 @@
       <Name>Global</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Files\PlatformConfiguration.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Files\FLCExtracts\FLC_EXTRACT_EUC_PC_20161207181238.csv" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
