Added WarrantyInfoParser to go through warranty data

--- a/CostAnalytics/DataFactory/DataFactory.csproj
+++ b/CostAnalytics/DataFactory/DataFactory.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Handlers\DataFactoryBusinessHandler.cs" />
+    <Compile Include="Parsers\WarrantyInfoParser.cs" />
     <Compile Include="Parsers\PlatformConfigurationParser.cs" />
     <Compile Include="Parsers\FLCExtractParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
