Added WarrantyInfoParser class to go through the Warranty Excel published by PG Finance. Added a Unit Test to try out the class.

--- a/CostAnalytics/UnitTest/UnitTest.csproj
+++ b/CostAnalytics/UnitTest/UnitTest.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="BusinessTest\BusinessTest.cs" />
     <Compile Include="DataFactoryTest\FLCExtractParserTest.cs" />
+    <Compile Include="DataFactoryTest\WarrantyDataParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
