--- a/CostAnalytics/Global/app.config
+++ b/CostAnalytics/Global/app.config
@@ -46,6 +46,9 @@
             <setting name="ConsolidatedFilePath" serializeAs="String">
                 <value>C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\PlatformConfiguration.txt</value>
             </setting>
+            <setting name="WarrantyInfoFilePath" serializeAs="String">
+                <value>C:\\Users\\Dominic_Bett\\Desktop\\Desktop Items\\PROJECTS\\Cost Analysis\\201706.xlsx</value>
+            </setting>
         </Dell.CostAnalytics.Global.Global>
     </applicationSettings>
 </configuration>
