--- a/CostAnalytics/Data/Data.csproj
+++ b/CostAnalytics/Data/Data.csproj
@@ -40,10 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Containers\Warranty.cs" />
+    <Compile Include="Containers\WarrantyCost.cs" />
     <Compile Include="Containers\Interfaces\IConfiguration.cs" />
     <Compile Include="Containers\Interfaces\ICost.cs" />
     <Compile Include="Containers\Interfaces\IIteration.cs" />
     <Compile Include="Containers\Interfaces\IMeasure.cs" />
+    <Compile Include="Containers\Interfaces\IWarranty.cs" />
+    <Compile Include="Containers\Interfaces\IWarrantyCost.cs" />
     <Compile Include="Containers\Interfaces\IRegion.cs" />
     <Compile Include="Containers\Interfaces\ISKU.cs" />
     <Compile Include="Containers\Cost.cs" />
@@ -54,6 +58,8 @@
     <Compile Include="Containers\Region.cs" />
     <Compile Include="Containers\Product.cs" />
     <Compile Include="Containers\Interfaces\IProduct.cs" />
+    <Compile Include="Sql\WarrantyCostSql.cs" />
+    <Compile Include="Sql\WarrantySql.cs" />
     <Compile Include="Sql\Common\BaseSql.cs" />
     <Compile Include="Sql\Common\SqlConnectionInfo.cs" />
     <Compile Include="Sql\Common\SqlConnectionManager.cs" />
@@ -64,6 +70,8 @@
     <Compile Include="Sql\Interfaces\ICostSql.cs" />
     <Compile Include="Sql\Interfaces\IIterationSql.cs" />
     <Compile Include="Sql\Interfaces\IMeasureSql.cs" />
+    <Compile Include="Sql\Interfaces\IWarrantySql.cs" />
+    <Compile Include="Sql\Interfaces\IWarrantyCostSql.cs" />
     <Compile Include="Sql\Interfaces\IProductSql.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Interfaces\IRegionSql.cs" />
